# aclarknet

./: .env.example  .eslintrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .stylelintrc.json  CODE_METRICS_DB_APP.md  CODE_REVIEW_DB_APP.md  CODE_REVIEW_SUMMARY.md  Dockerfile  FOREIGN_KEY_DESIGN_REVIEW.md  IMPLEMENTATION_SUMMARY.md  INVOICE_FIX_EXPLANATION.md  LICENSE  NOTES_GENERIC_FK.md  Procfile  README.md  REFACTORING_COMPLETE.md  TIME_ENTRY_FIX.md  UNUSED_FIELDS_ANALYSIS.md  WARP.md  buildspec.yml  conftest.py  dm  dm.py  justfile  logo.py  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  renovate.json  requirements.txt  run_manage.py  test_repo_sync.py  test_settings.py
.ebextensions/: 00_option_settings.config  01_files.config
.github/: copilot-instructions.md
aclarknet/: adapters.py  apps.py  asgi.py  email_utils.py  routers.py  settings.py  urls.py  wsgi.py
backend/: apps.py  mongo_apps.py  urls.py  utils.py  views.py
blog/: admin.py  apps.py  models.py  urls.py  views.py
cms/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
contactpage/: apps.py
data/: blog_entries.csv
db/: DJANGO_TEMPLATE_IN_OPERATOR_VERIFICATION.md  FAKER_ARCHITECTURE.md  FAKER_EXAMPLES.md  FAKER_INTEGRATION.md  FAKER_VISUAL_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  RELATED_FIELDS_REFACTORING.md  admin.py  apps.py  base_views.py  faker_utils.py  forms.py  middleware.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
deployment/: .env.example  DEPLOYMENT.md  DEPLOYMENT_UPDATE.md  README.md  SOCKET_ACTIVATION.md  aclarknet.service  aclarknet.socket  deploy.sh  nginx-aclarknet.conf  test_deployment_config.sh  thelounge.service
docs/: CLIENT_CATEGORIZATION.md  FEATURE_VISUAL_GUIDE.md  MANUAL_TESTING_GUIDE.md  NOTES_AS_TESTIMONIALS.md  README.md  SOCKET_ACTIVATION.md  STRIPE_TEST_MODE.md  conf.py  deployment_guide.md  deployment_quick.md  deployment_quickstart.md  email-fix-summary.rst  frontend_components.md  index.rst  notes-import.rst  notes_testimonials.rst  testimonials_quickstart.rst
frontend/: .babelrc  package-lock.json  package.json  test_dashboard_color.html
home/: apps.py  wagtail_hooks.py
lounge/: apps.py  package.json
nowpage/: apps.py
privacy/: apps.py
resume/: apps.py
search/: views.py
sitepage/: apps.py
(+879 files in other folders)
