[project]
name = "aclarknet"
version = "0.1.0"
dependencies = [
  "django-allauth",
  "django-crispy-forms",
  "django-import-export",
  "django-mongodb-backend",
  "django-phonenumber-field",
  "html2docx",
  "phonenumbers",
  "python-docx",
  "python-webpack-boilerplate",
  "texttable",
  "wagtail",
  "xhtml2pdf",
  "babel",
  "django-extensions",
  "django-hijack",
]

[project.optional-dependencies]
dev = [
  "django-debug-toolbar",
]
test = [
  "pytest",
  "pytest-django",
]

[tool.setuptools]
packages = ["aclarknet", "db"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aclarknet.settings.dev"
