[project]
name = "aclarknet"
version = "0.1.0"
dependencies = [
  "crispy-bootstrap5",
  "django-allauth",
  "django-crispy-forms",
  "django-import-export",
  "django-mongodb-backend",
  "django-phonenumber-field",
  "html2docx",
  "phonenumbers",
  "python-docx",
  "python-webpack-boilerplate",
  "texttable",
  "wagtail",
  "xhtml2pdf",
  "babel",
  "django-extensions",
  "gunicorn",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "Faker",
  "django-debug-toolbar",
  "django-hijack",
  "prek",
  "sphinx",
  "furo",
  "myst-parser",
]
test = [
  "pytest",
  "pytest-django",
]

[tool.setuptools]
packages = ["aclarknet", "db"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aclarknet.settings.dev"
